      potentially corrupting the map.
      And changing the tileset didn't reload tile animations [Ralph]
    * Bug 603: Shops ignore default item value for buy/sell prices
      [James Paige]
    * Bug 625: 'Damage instead of set' % based attacks now respect
      the cure and harmed by cure bitsets [Yuriy, Ralph]
    * More missing/wrong menu sound effects

  * New Plotscripting Stuff
    * You can now have up to 4096 global variables (global ID numbers
      0-4095) [James Paige]
    * loadtileset, gettileanimationoffset, settileanimationoffset,
      animationstarttile, currentdisplaytile now take layer arguments.
      "change tileset" and "layer tileset" also added for layer tilesets

  * Stuff only Developers Will Notice

  * Vikings of Midgard

Jan 21 2008 [voxhumana]

  * New Features
    * Attack bitset 'Do not chain if attack fails' [Mike Caron]
    * Equip screen displays the number by which a stat will change [James]
    * -s pixel smoothing now works with all bit depths, not just 8-bit
      [Reaxor Jones]
    * Attack bitsets to disable specific target slots now work for enemies
      also [James Paige]
    * Attacks can have preferred default targets based on factors such as
      distance or strongest stat or weakest stat [James Paige]
    * Customizable main menus. [James Paige]
    * New attack bitset "Cancel target's attack" [James Paige]
    * A hero for hire in a shop can (optionally) be given a specific
      experience level [James Paige]
    * New, customizable enemy dissolving styles [Mike Caron]
    * Tag name editor lets you browse tags at a glance, rather than
      searching for them by tag number [James Paige]
    * Browse for tags from any menu that takes tag numbers by pressing
      enter or space on the tag [James Paige]
    * Most (but not all) user interface colors in Game and Custom can now
      be customized. Each master palette has its own set [Simon, James]
    * User Interface color editor. [James Paige]